--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,11 @@ android {
     }
 }
 
+ext {
+    daggerVersion = '1.2.5'
+    leakCanaryVersion = '1.5.4'
+}
+
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.4.2'
@@ -34,7 +39,12 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    implementation "com.squareup.dagger:dagger:$daggerVersion"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    debugImplementation "com.squareup.leakcanary:leakcanary-android${rootProject.hasProperty("leak") ? "" : "-no-op"}:$leakCanaryVersion"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
+    testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
 }
