--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 }
 
 ext {
+    okHttpVersion = '3.9.1'
     daggerVersion = '1.2.5'
     leakCanaryVersion = '1.5.4'
 }
@@ -39,7 +40,12 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+
     implementation "com.squareup.dagger:dagger:$daggerVersion"
+    implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
+    implementation "io.reactivex:rxandroid:1.2.1"
+    implementation "io.reactivex:rxjava:1.1.7"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
